--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,17 +3,6 @@
   width: 100%;
 }
 
-input {
-  font-weight: 600;
-  border: none;
-  outline: none;
-  margin-left: 7px;
-}
-input:hover {
-  border: none;
-  border-radius: 0px;
-}
-
 .autocomplete-items {
   border: 1px solid #d4d4d4;
   border-radius: 4px;
@@ -29,25 +18,24 @@ input:hover {
 }
 
 .autocomplete-items div {
-  padding: 10px;
+  padding: 4px;
   cursor: pointer;
   background-color: #fff;
   border-bottom: 1px solid #d4d4d41a;
 }
 
 .autocomplete-items div:hover {
-  background-color: #a695957a;
+  background-color: #97ff807a;
 }
 
 .user-chip {
-    align-items: center;
-    padding: 4px 0px;
     text-align: center;
     color: rgb(0, 0, 0);
+    background-color: rgb(222, 255, 202);
 }
 
 .delete-icon-chip {
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   opacity: 0.7;
   cursor: pointer;
   float: right;
